# DA-KI

./: .gitignore  .pre-commit-config.yaml  BROWSER_INJECTION.js  CONTRIBUTING.md  DASHBOARD_FINAL_CORRECTED.py  DEPLOYMENT.md  DETAILLIERTER_MONITORING_FUNKTIONALITÄTS_BERICHT.md  Dockerfile  FINAL_TEST_RESULT.md  FINAL_WORKING_DASHBOARD.py  GIT_COMMIT_SUMMARY.md  HISTORICAL_DATA_README.md  LICENSE  LIVE_MONITORING_DASHBOARD_8054.py  LIVE_MONITORING_INTEGRATION_README.md  MODULAR_ARCHITECTURE_README.md  NGINX_SOLUTION.conf  NOCACHE_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  README_IMPROVED.md  SHOW_BUTTON_LOCATION.py  SOLUTION.html  SYSTEM_VERSIONS_REPORT.md  TESTBERICHT_DA_KI_DASHBOARD_20250615.md  TEST_FINAL_DASHBOARD.py  VOLLSTÄNDIGER_TESTBERICHT_DA_KI_DASHBOARD_20250615.md  WORKING_5_SLOT_DASHBOARD.py  WORKING_DASHBOARD_8054.py  compatibility_layer.py  comprehensive_dashboard_test.py  create_simple_5_slot_dashboard.py  dashboard_progress_fixed.py  dashboard_ready_for_110.py  debug_dashboard.py  debug_dashboard_content.py  deploy.sh  deploy_dashboard_110.py  deploy_instructions_110.md  (+32 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
CLAUDE_TESTS/: CLAUDE_TEST_dashboard_with_progress.py  CLAUDE_TEST_final_system_check.py  CLAUDE_TEST_real_button_click.py  README_CLAUDE_TESTS.md  debug_button_test.py  debug_dashboard.py  simple_button_test.py  simple_dashboard.py  start_correct_dashboard.py  test_actionbar_html.py  test_callback_debug.py  test_dashboard_main.py  test_dashboard_server.py  test_minimal_dashboard.py  test_orchestrator_import.py  test_progress_frontend.py
api/: api_top10_final.py  google_search_api.py
config/: config.yaml  plugins.json  secrets.env.template
database/: aktienanalyse_de.db  aktienanalyse_de.db-journal
deployment/: debian_setup.sh
deployment/cron/: da-ki
deployment/logrotate/: da-ki
deployment/systemd/: da-ki-redirect.service  da-ki.service
docs/: 01-projektanforderungen.md  02-umgebungsplanung.md  API.md  ARCHITECTURE.md  BUSINESS_CONCEPT.md  COMPREHENSIVE_MODULAR_TESTBERICHT.md  CONCEPT_OVERVIEW.md  CORRECTED_PORT_ERREICHBARKEIT.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_DASHBOARD_CONFIGURATION.md  IMPLEMENTATION_ROADMAP.md  MODULAR_ARCHITECTURE_TESTBERICHT.md  NETWORK_REQUIREMENTS.md  NETZWERK_ARCHITEKTUR_PLAN.md  RELEASE_NOTES_v1.0.md  TECHNICAL_CONCEPT.md  TEILPROJEKT_DEFINITION.md  TESTPROTOKOLL_20250615_085202.md  TESTPROTOKOLL_20250615_090721.md  TESTPROTOKOLL_20250615_091014.md  TESTPROTOKOLL_20250615_091816.md  TESTPROTOKOLL_20250615_091816.txt  TESTPROTOKOLL_TEMPLATE.md  bereitstellungsanleitung.md  data_sources.md  development_guidelines.md  entwicklungsbloecke.md  forecasting_methodology.md  prepare_server.sh  requirements.md  technical_analysis_requirements.md
docs/03-installation/: 01-basis-setup.md  02-services-konfiguration.md
docs/architecture/: plugin_architecture.md
docs/backend/: api_design.md  core_components.md  secret_management.md
docs/compliance/: audit_trail.md  broker_compliance.md  compliance_overview.md  legal_framework.md  risk_management.md
docs/deployment/: build_deploy_process.md  dev_environment.md
docs/docs/: 02-umgebungsplanung.md
docs/frontend/: ui_ux.md
docs/general/: documentation_guidelines.md
docs/standards/: code_standards.md
frontend/: dashboard.py  dashboard_dash_backup.py  dashboard_enhanced.py  dashboard_old_backup.py  dashboard_orchestrator.py  dashboard_simple.py  dashboard_top10.py  dashboard_top10_backup.py  frontend_callback_module.py  frontend_layout_module.py  frontend_tabelle_module.py  ki_wachstumsprognose_module.py  live_monitoring_module.py  test_action_button_debug.py  test_action_buttons.py
scripts/: backup.sh  create_ssl.sh  init_historical_monitoring.py  start.sh  update_data.sh
services/: growth_prediction_top10.py  historical_stock_data.py
services/caching/: __init__.py  redis_manager.py
services/external_apis/: __init__.py  yahoo_finance.py
services/websockets/: websocket_manager.py
src/: main.py  main_improved.py  main_integrated.py  redirect.py
src/auth/: jwt_utils.py
src/backend_components/: data_preparation.py  event_scoring_engine.py  ml_predictor.py  scoring_engine.py
src/config/: config.py  config_improved.py
src/database/: db_access.py  db_access_extended.py  db_migration.py  db_setup.py
src/frontend/: __init__.py  api_client.py  dashboard_app.py  orchestrator.py
src/frontend/components/: __init__.py  layout_components.py
src/frontend/modules/: __init__.py  ki_wachstumsprognose.py  live_monitoring.py
src/models/: api_models.py
src/plugins/: README.md  additional_data_sources.md  example_plugin_config.json  free_plugins_roadmap.md  plugin_manager.py  plugin_manager_demo.py  plugin_roadmap.md  test_plugin_manager.py
src/plugins/data_sources/: alpha_vantage_plugin.py  coingecko_plugin.py  data_source_plugin.py  ecb_data_plugin.py  financial_modeling_prep_plugin.py  fred_plugin.py  news_sentiment_plugin.py  reddit_sentiment_plugin.py  sec_filings_plugin.py  yahoo_finance_plugin.py
src/security/: auth_utils.py  encryption_utils.py
src/services/: analysis_service.py  portfolio_service.py  user_service.py
src/technical_indicators/: indicators.py
tests/: conftest.py  test_api_basic.py
