[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aktienanalyse-web-app"
version = "1.0.0"
description = "German stock analysis web application with AI-powered growth predictions"
authors = [
    {name = "User", email = "user@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dash==3.0.4",
    "fastapi==0.115.12",
    "Flask==3.0.3",
    "h11==0.16.0",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "narwhals==1.42.1",
    "nest-asyncio==1.6.0",
    "numpy==2.3.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "plotly==6.1.2",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.4",
    "retrying==1.3.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "Werkzeug==3.0.6",
    "zipp==3.23.0"
]

# Note: Services use __main__ blocks, not main() functions
# Run services directly with: python -m api.api_top10_final

[project.urls]
Homepage = "https://github.com/user/aktienanalyse-web-app"
Repository = "https://github.com/user/aktienanalyse-web-app"
Issues = "https://github.com/user/aktienanalyse-web-app/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "frontend*", "services*"]
exclude = ["venv*", "database*"]